2005-12-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (glib_check_version): Fix a copy-and-paste error
	in the docs.  (#325273, Declan Naughton)

2005-12-27  Manish Singh  <yosh@gimp.org>

	* tests/run-collate-tests.sh: use LC_ALL instead of LC_COLLATE, to
	make sure we really override things.

2005-12-27  Matthias Clasen  <mclasen@redhat.com>
	
	Fix #316221, Michal Benes, Stanislav Brabec;

	* configure.in: Fix a strict aliasing problem in 
	g_static_mutex_get_mutex(). 
	* glib/gthread.h: ...and in 
	g_static_mutex_get_mutex_impl_shortcut().

	* glib/gdatasetprivate.h: Add a cast to silence compiler
	warnings.  (#321978, Andrew Paprocki)

	Partial fix for bug #32937, Bogdan Nicula.

	* configure.in: Check for malloc.h
	* glib/gslice.c: Don't include malloc.h unconditionally.

2005-12-27  Manish Singh  <yosh@gimp.org>

	* tests/run-collate-tests.sh: export LC_COLLATE so it takes.
	(#324950, Dan Yefimov)

2005-12-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslice.c: On Win32, include process.h  (#325015, Kazuki
	Iwamoto)

2005-12-25  Matthias Clasen  <mclasen@redhat.com>

	* AUTHORS: Update my email

	* tests/slice-test.c: Fix C99isms.  (#324950, Dan Yefimov)

2005-12-21  Matthias Clasen  <mclasen@redhat.com>
	
	* README.in: Add some notes on when 'make check' may fail.

2005-12-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: 
	* glib/gthreadpool.h: 
	* glib/gthreadpool.c (g_thread_pool_set_sort_function): New function
	to sort tasks pushed into a threadpool.  (#324479, Martyn Russell)

	* tests/threadpool-test.c: Test this.

Tue Dec 20 18:14:14 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.[hc]: added mem_error() and mem_assert() to test and 
	handle 	errors without depending on gmessage.c which might not be
	setup when the error occours.
	removed G_SLICE_CONFIG_ALWAYS_FREE config option, fixed the code so
	always freeing can be achieved by adjusting the working set time to
	0 with G_SLICE_CONFIG_WORKING_SET_MSECS.